--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
   <!-- (1) force latest IE rendering engine: bit.ly/1c8EiC9 -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <title>{% if page.title %}{{ page.title }} | {{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
+  <title>{% include page-title.html %}</title>
   {% if page.meta_description %}
   <meta name="description" content="{{ page.meta_description | strip_html | strip_newlines }}" />
   {% elsif page.snippet %}
@@ -23,7 +23,7 @@
   {% if site.twitter_handle %}
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="{{ site.twitter_handle }}" />
-    <meta name="twitter:title" content="{% if page.title %}{{ page.title }} | {{ site.title }}{% else %}{{ site.title }}{% endif %}" />
+    <meta name="twitter:title" content="{% include page-title.html %}" />
     <meta name="twitter:image" content="{{ site.logo | prepend: site.baseurl | prepend: site.url }}" />
     {% if page.meta_description %}
     <meta name="twitter:description" content="{{ page.meta_description | strip_html | strip_newlines }}" />
@@ -37,7 +37,7 @@
   {% endif %}
 
   <meta property="og:site_name" content="{{ site.title }}" />
-  <meta property="og:title" content="{% if page.title %}{{ page.title }} | {{ site.title }}{% else %}{{ site.title }}{% endif %}"/>
+  <meta property="og:title" content="{% include page-title.html %}"/>
   {% if page.meta_description %}
   <meta property="og:description" content="{{ page.meta_description | strip_html | strip_newlines }}" />
   {% elsif page.snippet %}
@@ -80,6 +80,8 @@
   <link rel="stylesheet" type="text/css" media="screen" href="{{ "/css/main.css"  | prepend: site.baseurl  }}" />
   <link rel="stylesheet" type="text/css" media="print" href="{{ "/css/print.css"  | prepend: site.baseurl  }}" />
   <link rel="stylesheet" type="text/css" media="screen" href="{{ "/css/tooltip.css"  | prepend: site.baseurl  }}" />
+  <link rel="stylesheet" type="text/css" media="screen" href="{{ "/css/pages.css"  | prepend: site.baseurl  }}" />
+  <link rel="stylesheet" type="text/css" media="screen" href="{{ "/css/components.css"  | prepend: site.baseurl  }}" />
 
   <!-- MailerLite Universal -->
   <script>
