--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
 </script>
 
 <div class="teaserimage">
-  <div class="teaserimage-image" {% if site.cover %}style="background-image: url({{ site.cover | prepend: site.baseurl }})"{% endif %}>
+  <div class="teaserimage-image" {% if site.cover %}data-bg-image="{{ site.cover | prepend: site.baseurl }}"{% endif %}>
     <h1 class="blog-title">{{ site.title }}</h1>
     <div class="blog-subtitle">{{site.description}}</div>
 
@@ -33,7 +33,7 @@
 </div>
 
 <header class="blog-header">
-  <a class="blog-logo" href="{{site.url}}{{site.baseurl}}" style="background-image: url('{{ site.logo | prepend: site.baseurl }}')" aria-label="{{ site.title }} - Return to homepage">{{ site.title }}</a>
+  <a class="blog-logo" href="{{site.url}}{{site.baseurl}}" data-bg-image="{{ site.logo | prepend: site.baseurl }}" aria-label="{{ site.title }} - Return to homepage">{{ site.title }}</a>
 </header>
 
 
