--- a/_includes/javascripts.html
+++ b/_includes/javascripts.html
@@ -2,23 +2,13 @@
 <script type="text/javascript" src="{{ "/assets/js/jquery.fitvids.js" | prepend: site.baseurl  }}"></script>
 <script type="text/javascript" src="{{ "/assets/js/index.js" | prepend: site.baseurl  }}"></script>
 <script type="text/javascript" src="{{ "/assets/js/readingTime.min.js" | prepend: site.baseurl  }}"></script>
+<script type="text/javascript" src="{{ "/assets/js/dynamic-backgrounds.js" | prepend: site.baseurl  }}"></script>
 <script>
 (function ($) {
   "use strict";
   $(document).ready(function(){
 
-    var $window = $(window),
-    $image = $('.post-image-image, .teaserimage-image');
-    
-      $window.on('scroll', function() {
-        var top = $window.scrollTop();
-
-        if (top < 0 || top > 1500) { return; }
-        $image
-          .css('transform', 'translate3d(0px, '+top/3+'px, 0px)')
-          .css('opacity', 1-Math.max(top/700, 0));
-      });
-      $window.trigger('scroll');
+    var $window = $(window);
 
       var height = $('.article-image').height();
       $('.post-content').css('padding-top', height + 'px');
