--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,16 +9,16 @@
       <article class="post">
         {% if page.image %}
         <div class="article-image">
-          <div class="post-image-image" style="background-image: url({% if page.image %}{{ page.image }}{% endif %})">
+          <div class="post-image-image" {% if page.image %}data-bg-image="{{ page.image }}"{% endif %}>
             Article Image
           </div>
           <div class="post-meta">
             <h1 class="post-title">{{ page.title }}</h1>
             <div class="cf post-meta-text">
-              <div class="author-image" style="background-image: url({{ site.author_image | prepend: site.baseurl }})">Blog Logo</div>
+              <div class="author-image" data-bg-image="{{ site.author_image | prepend: site.baseurl }}">Blog Logo</div>
               <h4 class="author-name" itemprop="author" itemscope itemtype="http://schema.org/Person">{{ site.author }}</h4>
             </div>
-            <div style="text-align:center">
+            <div class="text-center">
               <a href="#topofpage" class="topofpage"><i class="fa fa-angle-down"></i></a>
             </div>
           </div>
@@ -41,7 +41,7 @@
       </article>
     </main>
     <div class="bottom-closer">
-      <div class="background-closer-image" {%if site.cover %} style="background-image: url({{ site.cover | prepend: site.baseurl }})"{% endif %}>
+      <div class="background-closer-image" {%if site.cover %} data-bg-image="{{ site.cover | prepend: site.baseurl }}"{% endif %}>
         Image
       </div>
       <div class="inner">
