--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@
         <div class="article-image">
           <div class="post-meta">
             <h1 class="post-title">{{ page.title }}</h1>
-            <div style="text-align:center">
+            <div class="text-center">
               <a href="#topofpage" class="topofpage"><i class="fa fa-angle-down"></i></a>
             </div>
           </div>
@@ -49,7 +49,7 @@
           </section>
         </footer>
         <div class="bottom-teaser cf">
-          <div class="isRight" style="width: 100%; float: none;">
+          <div class="isRight full-width-block">
             <h5 class="index-headline featured"><span>RSS</span></h5>
             <footer class="site-footer">
               <a class="subscribe" href="{{ "/feed.xml" | prepend: site.baseurl }}"> <i class="fa fa-rss"></i> Subscribe via RSS</a>
@@ -62,7 +62,7 @@
       </article>
     </main>
     <div class="bottom-closer">
-      <div class="background-closer-image" {%if site.cover %} style="background-image: url({{ site.cover | prepend: site.baseurl }})"{% endif %}>
+      <div class="background-closer-image" {%if site.cover %} data-bg-image="{{ site.cover | prepend: site.baseurl }}"{% endif %}>
         Image
       </div>
       <div class="inner">
