--- a/css/main.sass
+++ b/css/main.sass
@@ -3,48 +3,7 @@
 
 @import 'variables'
 
-// Breadcrumbs styling
-.breadcrumbs
-  margin-bottom: 20px
-  padding: 10px 0
-  font-size: 0.9em
-  color: #666
-
-  ol
-    list-style: none
-    margin: 0
-    padding: 0
-    display: flex
-    flex-wrap: wrap
-    align-items: center
-
-  li
-    display: inline-block
-
-    &:not(:last-child):after
-      content: "/"
-      margin: 0 8px
-      color: #ccc
-
-  li[aria-current="page"]
-    color: #666
-    font-weight: 500
-
-  a
-    color: $color-primary
-    text-decoration: none
-
-    &:hover
-      text-decoration: underline
-
-  @media (max-width: 600px)
-    font-size: 0.8em
-
-    li:not(:last-child):not(:first-child)
-      display: none
-
-    li:first-child:after
-      content: "..."
+// Breadcrumbs styling moved to components/_breadcrumbs.sass
 
 @import 'syntax-highlighting'
 
