--- a/_includes/head.html
+++ b/_includes/head.html
@@ -52,6 +52,11 @@
   <meta property="og:type" content="blog" />
   {% if page.date %}<meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}">{% endif %}
 
+  <!-- Additional SEO meta tags -->
+  <meta name="author" content="{{ site.author | default: 'Contemplative Neuroscience' }}">
+  <meta name="robots" content="index, follow">
+  <meta name="theme-color" content="#ffffff">
+
   {% if page.layout == 'post' %}
   <!-- For research papers, canonical URL is always without parameters -->
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}"/>
