--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,41 +36,9 @@
             {{page.citation|markdownify | replace: '<p>', '<p class="citation">'}}
           {%- endif -%}
         </section>
-        <footer class="post-footer">
-          <section class="share">
-            {% for social in site.social %}
-              {% if social.share_url != null %}
-                <a class="icon-{{ social.icon }}" href="{{ social.share_url }}{% if social.share_title %}{{ social.share_title }}{{page.title | cgi_escape}}{% endif %}{{ social.share_link }}{{site.url}}{{site.baseurl}}{{page.id}}"
-                  onclick="window.open(this.href, '{{ social.icon }}-share', 'width=550,height=255');return false;">
-                <i class="fa fa-{{ social.icon }}"></i><span class="hidden">{{ social.icon }}</span>
-                </a>
-              {% endif %}
-            {% endfor %}
-          </section>
-        </footer>
-        <div class="bottom-teaser cf">
-          <div class="isRight full-width-block">
-            <h5 class="index-headline featured"><span>RSS</span></h5>
-            <footer class="site-footer">
-              <a class="subscribe" href="{{ "/feed.xml" | prepend: site.baseurl }}"> <i class="fa fa-rss"></i> Subscribe via RSS</a>
-              <div class="inner">
-                <section class="copyright">All content &copy; <a href="{{site.url}}/">{{site.author}}</a>, {{ site.time | date: '%Y' }}</section>
-              </div>
-            </footer>
-          </div>
-        </div>
       </article>
     </main>
-    <div class="bottom-closer">
-      <div class="background-closer-image" {%if site.cover %} data-bg-image="{{ site.cover | prepend: site.baseurl }}"{% endif %}>
-        Image
-      </div>
-      <div class="inner">
-        <h1 class="blog-title">{{ site.title }}</h1>
-        <h2 class="blog-description">{{ site.description }}</h2>
-        <a href={{ "/" | prepend: site.baseurl }} class="btn">Home</a>
-      </div>
-    </div>
+    {% include footer.html %}
     {% include javascripts.html %}
   </body>
 </html>
