--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,7 @@
 
   <meta name="HandheldFriendly" content="True" />
   <meta name="MobileOptimized" content="320" />
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   {% if site.twitter_handle %}
     <meta name="twitter:card" content="summary" />
