--- a/_includes/javascripts.html
+++ b/_includes/javascripts.html
@@ -1,30 +1,5 @@
 <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-<script type="text/javascript" src="{{ "/assets/js/bundle.js" | prepend: site.baseurl  }}"></script>
-<script>
-(function ($) {
-  "use strict";
-  $(document).ready(function(){
-
-    var $window = $(window);
-
-      var height = $('.article-image').height();
-      $('.post-content').css('padding-top', height + 'px');
-
-      $('a[href*=#]:not([href=#])').click(function() {
-        if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'')
-         && location.hostname == this.hostname) {
-          var target = $(this.hash);
-          target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
-          if (target.length) {
-            $('html,body').animate({ scrollTop: target.offset().top }, 500);
-            return false;
-          }
-        }
-      });
-
-  });
-}(jQuery));
-</script>
+<script type="text/javascript" src="{{ "/assets/js/bundle.min.js" | prepend: site.baseurl  }}"></script>
 {% if site.google_analytics %}
 {% include google_analytics.html %}
 {% endif %}
