Add trailing slashes to links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,7 @@
 </div>
 
 <header class="blog-header">
-  <a class="blog-logo" href="{{site.url}}{{site.baseurl}}" data-bg-image="{{ site.logo | prepend: site.baseurl }}" aria-label="{{ site.title }} - Return to homepage">{{ site.title }}</a>
+  <a class="blog-logo" href="{{site.url}}{{site.baseurl}}/" data-bg-image="{{ site.logo | prepend: site.baseurl }}" aria-label="{{ site.title }} - Return to homepage">{{ site.title }}</a>
 </header>
 
 
